fix: fix layout for price, contacts and footer on tablet

--- a/portfolio/css/index.css
+++ b/portfolio/css/index.css
@@ -419,6 +419,14 @@ body {
   padding: 0;
   list-style: none;
 }
+@media (max-width: 768px) {
+  .price__list {
+    grid-template-columns: 1fr;
+    gap: 50px;
+    max-width: 420px;
+    margin-inline: auto;
+  }
+}
 .price__item {
   display: flex;
   flex-direction: column;
@@ -427,6 +435,11 @@ body {
   min-height: 505px;
   border: 3px solid #bdae82;
   padding-block: 40px;
+}
+@media (max-width: 768px) {
+  .price__item {
+    line-height: 2;
+  }
 }
 .price__item-title {
   margin: 0;
@@ -447,6 +460,11 @@ body {
   list-style: none;
 }
 
+@media (max-width: 768px) {
+  .contacts {
+    margin-top: -20px;
+  }
+}
 .contacts__container {
   display: flex;
   justify-content: flex-end;
@@ -457,12 +475,19 @@ body {
   background-position: center;
   background-size: auto 100%;
 }
+@media (max-width: 768px) {
+  .contacts__container {
+    justify-content: center;
+    min-height: 600px;
+  }
+}
 .contacts__title {
   margin-bottom: 40px;
+  line-height: 2;
 }
 @media (max-width: 768px) {
   .contacts__title {
-    line-height: 2;
+    text-align: center;
   }
 }
 .contacts__form {
@@ -475,6 +500,7 @@ body {
   padding: 5px 20px;
   color: #ffffff;
   font-size: 20px;
+  line-height: 2;
   background: rgba(0, 0, 0, 0.5);
   border: none;
   outline: 2px solid #bdae82;
@@ -497,6 +523,11 @@ body {
   margin-bottom: 10px;
   resize: none;
 }
+@media (max-width: 768px) {
+  .contacts__submit {
+    align-self: center;
+  }
+}
 
 .footer {
   font-size: 20px;
@@ -507,17 +538,33 @@ body {
   justify-content: space-between;
   padding-block: 50px;
 }
+@media (max-width: 768px) {
+  .footer__container {
+    padding-block: 28px;
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+    align-items: center;
+  }
+}
 .footer__copyright {
   display: flex;
   gap: 20px;
 }
-.footer__rs-school {
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
+@media (min-width: 769px) {
+  .footer__rs-school {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
 .footer__copyright, .footer__rs-school {
   line-height: 2.5;
+}
+@media (max-width: 768px) {
+  .footer__copyright, .footer__rs-school {
+    line-height: 24px;
+  }
 }
 .footer__socials-list {
   display: flex;
@@ -525,6 +572,12 @@ body {
   margin: 0;
   padding: 0;
   list-style: none;
+}
+@media (max-width: 768px) {
+  .footer__socials-list {
+    margin-top: 4px;
+    padding-block: 9px;
+  }
 }
 .footer__socials-item {
   display: flex;
