--- a/portfolio/scss/_contacts.scss
+++ b/portfolio/scss/_contacts.scss
@@ -1,6 +1,10 @@
 @use "variables" as *;
 
 .contacts {
+  @media (max-width: $breakpoint-tablet) {
+    margin-top: -20px;
+  }
+
   &__container {
     display: flex;
     justify-content: flex-end;
@@ -10,13 +14,19 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: auto 100%;
+
+    @media (max-width: $breakpoint-tablet) {
+      justify-content: center;
+      min-height: 600px;
+    }
   }
 
   &__title {
     margin-bottom: 40px;
+    line-height: 2;
 
     @media (max-width: $breakpoint-tablet) {
-      line-height: 2;
+      text-align: center;
     }
   }
 
@@ -32,6 +42,7 @@
     padding: 5px 20px;
     color: $color-white;
     font-size: 20px;
+    line-height: 2;
     background: rgba(0 0 0 / 50%);
     border: none;
     outline: 2px solid $color-gold;
@@ -48,5 +59,11 @@
     height: 100px;
     margin-bottom: 10px;
     resize: none;
+  }
+
+  &__submit {
+    @media (max-width: $breakpoint-tablet) {
+      align-self: center;
+    }
   }
 }
